# Cmake

Cmake 3/: CMakeLists.txt
Cmake 3/include/: matrix_operations.hpp
Cmake 3/src/: main.cpp  matrix_operations.cpp
Project 3 (Hello C++)/: CMakeLists.txt  Document project.txt  Person.cpp  Person.h  main.cpp
